# pdm-crypt-module

./: .gitignore  CMakeList  CMakeLists.txt  Dockerfile  Makefile  README.md  build-xcode-ios.sh  install_ios.sh  ios.toolchain.cmake  rebuild_ios.sh
clean_src/: Makefile  c20  cc20_dev-.cpp  cc20_dev.cpp  cc20_file.cpp  cc20_file.h  cc20_multi.cpp  cc20_multi.h  ec.cpp  empp.cpp
include/: cc20_dev.hpp  cc20_multi.h
includes/: cc20_poly.hpp
lib/: sha3.cpp
lib/boost/: b2
lib/boost-linux/bin.v2/: project-cache.jam
lib/boost-linux/stage/lib/: libboost_atomic.so.1.76.0  libboost_prg_exec_monitor.so.1.76.0  libboost_system.so.1.76.0  libboost_timer.so.1.76.0
lib/boost-linux/stage/lib/cmake/boost_atomic-1.76.0/: boost_atomic-config.cmake  libboost_atomic-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_chrono-1.76.0/: boost_chrono-config.cmake  libboost_chrono-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_prg_exec_monitor-1.76.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-shared.cmake  libboost_prg_exec_monitor-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_system-1.76.0/: libboost_system-variant-shared.cmake  libboost_system-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_test_exec_monitor-1.76.0/: libboost_test_exec_monitor-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_thread-1.76.0/: libboost_thread-variant-shared.cmake  libboost_thread-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_timer-1.76.0/: boost_timer-config.cmake  libboost_timer-variant-shared.cmake  libboost_timer-variant-static.cmake
lib/boost-linux/stage/lib/cmake/boost_unit_test_framework-1.76.0/: boost_unit_test_framework-config.cmake  libboost_unit_test_framework-variant-shared.cmake
lib/boost-mac/stage/lib/: libboost_atomic.dylib  libboost_system.dylib
lib/boost-mac/stage/lib/cmake/boost_atomic-1.76.0/: boost_atomic-config.cmake  libboost_atomic-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_chrono-1.76.0/: boost_chrono-config.cmake  libboost_chrono-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_exception-1.76.0/: boost_exception-config.cmake
lib/boost-mac/stage/lib/cmake/boost_prg_exec_monitor-1.76.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_regex-1.76.0/: boost_regex-config.cmake  libboost_regex-variant-shared.cmake  libboost_regex-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_system-1.76.0/: boost_system-config.cmake  libboost_system-variant-shared.cmake
lib/boost-mac/stage/lib/cmake/boost_test_exec_monitor-1.76.0/: libboost_test_exec_monitor-variant-shared.cmake
lib/boost-mac/stage/lib/cmake/boost_thread-1.76.0/: libboost_thread-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_timer-1.76.0/: boost_timer-config.cmake  libboost_timer-variant-static.cmake
lib/boost-mac/stage/lib/cmake/boost_unit_test_framework-1.76.0/: boost_unit_test_framework-config.cmake  libboost_unit_test_framework-variant-shared.cmake
lib/boost/bin.v2/: project-cache.jam
lib/boost/stage/lib/cmake/boost_prg_exec_monitor-1.76.0/: libboost_prg_exec_monitor-variant-shared.cmake
lib/cpp-mmf/: memory_mapped_file.cpp
lib/poly1305-donna-master/: a.out
pdm-native-lib/libs/include/encrypted_sqlite/: pdmCryptoDB.hpp  pdm_database.h
pdm-native-lib/libs/lib/: libSecureMemory.dylib  libencrypted_sqlite.0.1.dylib  libencrypted_sqlite.0.dylib  libencrypted_sqlite.dylib
scripts/: compileJavaModule.cmd  mem_side_channel_x_times.sh
src/: .gitignore  84.txt  84.txt.pdm  Makefile  Makefile_back  bout.temp.pdm  build_t  build_t.cmd  c20  c20.c  c20de  c20de.c  cc20_dev.cpp  cc20_multi-stl-thread.cpp  cc20_multi.cpp  cc20_multi.h  cc20_poly.cpp  cc20_poly.h  cc20_wrapper.cpp  copy1.pdm  copy2.pdm  d20  d20de  db.sh  dec-84.txt  desktop.cpp  empp.c  empp.cpp  emppIOS.h  hex-test  hex1  hex2  mkdebug.sh  noinc  ossl.sh  pdm-service.h  pdm-service.hpp  short  short.sh  test  (+6 more)
src/c20.dSYM/Contents/: Info.plist
src/c20.dSYM/Contents/Resources/DWARF/: c20
src/c20de.dSYM/Contents/: Info.plist
src/c20de.dSYM/Contents/Resources/DWARF/: c20de
src/cc20core/: CMakeLists.txt  cc20_multi.cpp
src/include/: cc20_dev.h  cc20_dev.hpp  cc20_multi.h  cc20_wrapper.h  empp.h
src/kyber/: ntt.cpp  ntt.h
src/lib/: CMakeLists.txt  cc20_scrypt.h  crypto_rand.hpp  sha3.cpp
src/lib/scrypt/: package-lock.json
src/lib/scrypt/src/: scrypt.c
src/low-level/: assembly.cpp
src/xcc20/: CMakeLists.txt  xCc20.cpp
test/: Makefile  ecc_test.cpp  f_test  mmf_test.cpp  poly_test.cpp  r_test.cpp  safe_test  web_debug
test/web_debug.dSYM/Contents/: Info.plist
test/web_debug.dSYM/Contents/Resources/DWARF/: web_debug
